--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "start": "pcf-scripts start"
   },
   "dependencies": {
-    "@fluentui/react": "^8.14.4",
-    "@types/node": "^15.0.2",
-    "@types/powerapps-component-framework": "^1.3.0",
-    "@types/xrm": "^9.0.39",
+    "@fluentui/react": "^8.21.0",
+    "@types/node": "^15.12.5",
+    "@types/powerapps-component-framework": "^1.3.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-query": "^3.18.1"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.20.0",
@@ -24,7 +24,7 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.3.1",
-    "pcf-scripts": "^1",
-    "pcf-start": "^1"
+    "pcf-scripts": "^1.7.4",
+    "pcf-start": "^1.7.4"
   }
 }
