--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
     "start": "pcf-scripts start"
   },
   "dependencies": {
-    "@fluentui/react": "^8.21.0",
-    "@types/node": "^15.12.5",
-    "@types/powerapps-component-framework": "^1.3.1",
+    "@fluentui/react": "^8.42.5",
+    "@types/node": "^16.11.9",
+    "@types/powerapps-component-framework": "^1.3.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-query": "^3.18.1"
+    "react-query": "^3.33.4"
   },
   "devDependencies": {
+    "@types/react": "^17.0.36",
+    "@types/react-dom": "^17.0.11",
     "@typescript-eslint/eslint-plugin": "^4.20.0",
     "@typescript-eslint/parser": "^4.20.0",
     "eslint": "^7.23.0",
@@ -24,7 +26,10 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.3.1",
-    "pcf-scripts": "^1.7.4",
-    "pcf-start": "^1.7.4"
+    "pcf-scripts": "^1.9.9",
+    "pcf-start": "^1.9.9",
+    "typescript": "^4.5.2",
+    "clean-webpack-plugin": "^4.0.0",
+    "speed-measure-webpack-plugin": "^1.5.0"
   }
 }
