--- a/package.json
+++ b/package.json
@@ -9,16 +9,16 @@
     "start": "pcf-scripts start"
   },
   "dependencies": {
-    "@fluentui/react": "^8.60.0",
-    "@types/node": "^17.0.21",
+    "@fluentui/react": "^8.87.1",
+    "@types/node": "^18.6.5",
     "@types/powerapps-component-framework": "^1.3.4",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-query": "^3.34.16"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "@tanstack/react-query": "^4.0.10"
   },
   "devDependencies": {
-    "@types/react": "^17.0.39",
-    "@types/react-dom": "^17.0.13",
+    "@types/react": "^18.0.17",
+    "@types/react-dom": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^4.20.0",
     "@typescript-eslint/parser": "^4.20.0",
     "eslint": "^7.23.0",
@@ -26,9 +26,9 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.3.1",
-    "pcf-scripts": "^1.12.2",
-    "pcf-start": "^1.12.2",
-    "typescript": "^4.6.2",
+    "pcf-scripts": "^1.16.6",
+    "pcf-start": "^1.16.6",
+    "typescript": "^4.7.4",
     "clean-webpack-plugin": "^4.0.0",
     "speed-measure-webpack-plugin": "^1.5.0"
   }
