--- a/package.json
+++ b/package.json
@@ -6,30 +6,46 @@
     "build": "pcf-scripts build",
     "clean": "pcf-scripts clean",
     "rebuild": "pcf-scripts rebuild",
-    "start": "pcf-scripts start"
+    "start": "pcf-scripts start",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "@fluentui/react": "^8.87.1",
+    "@tanstack/react-query": "^4.0.10",
     "@types/node": "^18.6.5",
     "@types/powerapps-component-framework": "^1.3.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "@tanstack/react-query": "^4.0.10"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.20.7",
+    "@shko.online/componentframework-mock": "^0.1.13",
+    "@storybook/addon-actions": "^6.5.16",
+    "@storybook/addon-essentials": "^6.5.16",
+    "@storybook/addon-interactions": "^6.5.16",
+    "@storybook/addon-links": "^6.5.16",
+    "@storybook/builder-webpack5": "^6.5.16",
+    "@storybook/manager-webpack5": "^6.5.16",
+    "@storybook/react": "^6.5.16",
+    "@storybook/testing-library": "^0.0.13",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^4.20.0",
     "@typescript-eslint/parser": "^4.20.0",
+    "babel-loader": "^8.3.0",
+    "browserlist": "^1.0.1",
+    "browserslist": "^4.21.5",
+    "clean-webpack-plugin": "^4.0.0",
     "eslint": "^7.23.0",
     "eslint-config-standard": "^16.0.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.3.1",
+    "eslint-plugin-storybook": "^0.6.10",
     "pcf-scripts": "^1.16.6",
     "pcf-start": "^1.16.6",
-    "typescript": "^4.7.4",
-    "clean-webpack-plugin": "^4.0.0",
-    "speed-measure-webpack-plugin": "^1.5.0"
+    "speed-measure-webpack-plugin": "^1.5.0",
+    "typescript": "^4.7.4"
   }
 }
