--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
         "sourceMap": true,
         "module": "es2015",
         "moduleResolution": "node",
-        "jsx": "react-jsx"
+        "jsx": "react-jsx",
+        "allowSyntheticDefaultImports": true
     }
 }
