--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -1,56 +1,23 @@
-# Sample workflow for building and deploying a Jekyll site to GitHub Pages
-name: Deploy Storybook to Pages
-
+# ref : https://budiirawan.com/how-to-publish-storybook-github-pages/
+name: Storybook
 on:
-  # Runs on pushes targeting the default branch
   push:
-    branches: ["main"]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-# Allow one concurrent deployment
-concurrency:
-  group: "pages"
-  cancel-in-progress: true
+    branches:
+      - main # if any push happens on branch `main`, run this workflow. You could also add `paths` to detect changes in specific folder
 
 jobs:
-  # Build job
-  build:
-    runs-on: windows-latest
+  build-and-deploy:
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
-      - name: Setup Pages
-        uses: actions/configure-pages@v3
-      - name: Setup NodeJs
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
-          cache: 'npm'
-      - name: Install Dependencies
-        run: npm ci
-      - name: Build Storybook
-        run: npm run build-storybook
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v1
-        with:
-          path: './storybook-static'
+        uses: actions/checkout@v2.3.1
 
-  # Deployment job
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v1
+      - name: Install and Build
+        run: |
+          npm ci
+          npm run build-storybook
+      - name: Deploy
+        uses: JamesIves/github-pages-deploy-action@3.6.2
+        with:
+          branch: gh-pages
+          folder: storybook-static # output folder from `npm run build-storybook`
