--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "clean": "pcf-scripts clean",
     "rebuild": "pcf-scripts rebuild",
     "start": "pcf-scripts start",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
+    "refreshTypes": "pcf-scripts refreshTypes",
+    "storybook": "storybook dev -p 6006",
+    "test-storybook": "test-storybook",
+    "build-storybook": "storybook build",
     "deploy-storybook": "gh-pages -d storybook-static"
   },
   "dependencies": {
@@ -21,15 +23,21 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.7",
-    "@shko.online/componentframework-mock": "^0.1.16",
-    "@storybook/addon-actions": "^6.5.16",
-    "@storybook/addon-essentials": "^6.5.16",
-    "@storybook/addon-interactions": "^6.5.16",
-    "@storybook/addon-links": "^6.5.16",
-    "@storybook/builder-webpack5": "^6.5.16",
-    "@storybook/manager-webpack5": "^6.5.16",
-    "@storybook/react": "^6.5.16",
-    "@storybook/testing-library": "^0.0.13",
+    "@babel/preset-env": "^7.21.4",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.21.4",
+    "@shko.online/componentframework-mock": "^0.1.23",
+    "@storybook/addon-actions": "^7.4.6",
+    "@storybook/addon-essentials": "^7.4.6",
+    "@storybook/addon-interactions": "^7.4.6",
+    "@storybook/addon-links": "^7.4.6",
+    "@storybook/addon-mdx-gfm": "^7.4.6",
+    "@storybook/addons": "^7.4.6",
+    "@storybook/blocks": "^7.4.6",
+    "@storybook/client-api": "^7.4.6",
+    "@storybook/html": "^7.4.6",
+    "@storybook/html-webpack5": "^7.4.6",
+    "@storybook/testing-library": "^0.2.2",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^4.20.0",
@@ -37,17 +45,20 @@
     "babel-loader": "^8.3.0",
     "browserlist": "^1.0.1",
     "browserslist": "^4.21.5",
+    "chromatic": "^6.17.3",
     "clean-webpack-plugin": "^4.0.0",
+    "esbuild-loader": "^3.0.1",
     "eslint": "^7.23.0",
     "eslint-config-standard": "^16.0.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.3.1",
-    "eslint-plugin-storybook": "^0.6.10",
+    "eslint-plugin-storybook": "^0.6.14",
     "gh-pages": "^5.0.0",
     "pcf-scripts": "^1.16.6",
     "pcf-start": "^1.16.6",
     "speed-measure-webpack-plugin": "^1.5.0",
+    "storybook": "^7.4.6",
     "typescript": "^4.7.4"
   }
 }
