--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "rebuild": "pcf-scripts rebuild",
     "start": "pcf-scripts start",
     "refreshTypes": "pcf-scripts refreshTypes",
-    "storybook": "storybook dev -p 6006",
+    "storybook": "storybook dev -p 6006 --debug-webpack",
     "test-storybook": "test-storybook",
     "build-storybook": "storybook build",
     "deploy-storybook": "gh-pages -d storybook-static"
@@ -25,18 +25,18 @@
     "@babel/preset-env": "^7.21.4",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.21.4",
+    "@storybook/addon-webpack5-compiler-babel" : "^3.0.3",
     "@shko.online/componentframework-mock": "^0.6.3",
-    "@storybook/addon-actions": "^7.4.6",
-    "@storybook/addon-essentials": "^7.4.6",
-    "@storybook/addon-interactions": "^7.4.6",
-    "@storybook/addon-links": "^7.4.6",
-    "@storybook/addon-mdx-gfm": "^7.4.6",
-    "@storybook/addons": "^7.4.6",
-    "@storybook/blocks": "^7.4.6",
-    "@storybook/client-api": "^7.4.6",
-    "@storybook/html": "^7.4.6",
-    "@storybook/html-webpack5": "^7.4.6",
-    "@storybook/testing-library": "^0.2.2",
+    "@storybook/addon-actions": "^8.1.11",
+    "@storybook/addon-essentials": "^8.1.11",
+    "@storybook/addon-interactions": "^8.1.11",
+    "@storybook/addon-links": "^8.1.11",
+    "@storybook/addon-mdx-gfm": "^8.1.11",
+    "@storybook/blocks": "^8.1.11",
+    "@storybook/preview-api" :  "^8.1.11",
+    "@storybook/html": "^8.1.11",
+    "@storybook/html-webpack5": "^8.1.11",
+    "@storybook/test": "^8.1.11",
     "@types/node": "^18.6.5",
     "@types/powerapps-component-framework": "^1.3.14",
     "@types/react": "^18.0.17",
@@ -62,7 +62,7 @@
     "pcf-scripts": "^1",
     "pcf-start": "^1",
     "speed-measure-webpack-plugin": "^1.5.0",
-    "storybook": "^7.4.6",
+    "storybook": "^8.1.11",
     "typescript": "^4.7.4"
   }
 }
