--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "browserslist": "^4.21.5",
     "chromatic": "^6.17.3",
     "clean-webpack-plugin": "^4.0.0",
+    "esbuild-loader":"4.4.0",
     "eslint": "^7.23.0",
     "eslint-config-standard": "^16.0.2",
     "eslint-plugin-import": "^2.22.1",
